<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.microsoft.windowsazure.mobileservices.zumoe2elogintestapp.MainActivity">

    <Button
       android:id="@+id/buttonGoogleLogin"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/button_google_login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewGoogleLogin"
        android:layout_weight="0.02" />

    <Button
        android:id="@+id/buttonFacebookLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_facebook_login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFacebookLogin"
        android:layout_weight="0.02" />

    <Button
        android:id="@+id/buttonMSALogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_MSA_login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewMSALogin"
        android:layout_weight="0.01" />

    <Button
        android:id="@+id/buttonAADLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_AAD_login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAADLogin"
        android:layout_weight="0.01" />

    <Button
        android:id="@+id/buttonTwitterLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_twitter_login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTwitterLogin"
        android:layout_weight="0.02" />

</LinearLayout>